--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,6 @@
 v0.01
+(Thomson)       - Added gwImage
+                - Fixed bug in text wrapping (no extra space at the beginning of the text)
 (Thomson)	- Added gwElements: rectangle, button
 		- Added rectangles and buttons example
 (Thomson)       - Added compass as hooks example
@@ -6,7 +8,8 @@ v0.01
                           only when 'c' is pressed
 			- Updated compass images to those created by Germanny (thanks!)
 (JKos)		- Added spell_book script entity for developement purposes
-			- Elements are not indexed by id anymore because the rendering order of the elements was random with string indexes (pairs problem)
+			- Elements are not indexed by id anymore because the rendering order 
+                          of the elements was random with string indexes (pairs problem)
 			- key hooks fixed 
 (Thomson) 	- Added events handler (gw_events script)
 			- Added new prop - gw_event (it represents a localized event in the dungeon)
